bootstrap/vllm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  # The label selector should match the deployment labels & it is useful for prefix caching feature
  selector:
    app: vllm
  sessionAffinity: None
  type: ClusterIP
